--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,33 @@
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+body{
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+nav {
+    display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.navbar-logo {
+    display: flex;
+}
+
+.navbar-icon {
+    display: flex;
+    color: black;
+    text-decoration: none;
+}
 .logo-icon {
-    height: 48px;
-    width: 48px;
-    border: 1px solid;
-    background-image: url();
+    height: 50px; 
+    width: 50px;
+    background-image: url(https://i.pinimg.com/originals/9b/61/6d/9b616d46f16675d242b9b95217c46e00.jpg);
     background-size: cover;
-    border-radius: 50%;
+}
+
+span {
+    display: flex;
+    width: 1px;
+    align-items: center;
 }
 
 .nav-container {
@@ -18,43 +35,18 @@ nav {
 }
 
 .nav-item {
-    border: 1px solid;
     color: black;
     text-decoration: none;
     font-size: 16px;
     font-weight: bold;
     padding: 8px;
-    border-radius: 8px;
 }
 
-.banner-img {
-    border: 1px solid;
-    height: 300px;
-    background-image: url();
-    background-size: cover;
-    background-position: center;
+.form-grup {
+    margin-bottom: 15px;
 }
 
-.profile-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.profile-item {
-    height: 50px;
-    text-align: -webkit-center;
-}
-
-.profile-img {
-    border: 1px solid;
-    height: 50px;
-    background-image: url();
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
-    width: 50px;
-}
-
-footer {
-    text-align: right;
+label {
+    display: block;
+    margin-bottom: 5px;
 }
