--- a/css/styles.css
+++ b/css/styles.css
@@ -2,51 +2,41 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-nav {
+header {
     display: flex;
 	justify-content: space-between;
 	align-items: center;
-}
-
-.navbar-logo {
-    display: flex;
 }
 
 .navbar-icon {
     display: flex;
     color: black;
     text-decoration: none;
+    
 }
 .logo-icon {
-    height: 50px; 
-    width: 50px;
-    background-image: url(https://i.pinimg.com/originals/9b/61/6d/9b616d46f16675d242b9b95217c46e00.jpg);
-    background-size: cover;
+    height: 60px;
+    width: 200px;
 }
 
-span {
+nav ul {
+    list-style: none;
     display: flex;
-    width: 1px;
-    align-items: center;
+    gap: 20px;
 }
 
-.nav-container {
-    display: flex;
-}
-
-.nav-item {
-    color: black;
+nav ul li a {
     text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 8px;
+    color: black;
+    padding: 10px;
 }
 
-.form-grup {
-    margin-bottom: 15px;
+.welcome-section {
+    display: flex;
+    flex-direction: column;
 }
 
-label {
-    display: block;
-    margin-bottom: 5px;
+.banner-container{
+    max-width: 100%;
 }
+
