--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ header {
 	align-items: center;
 }
 
+/* NAVIGASI */
 /* LOGO NAVIGASI */
 .logo-icon {
     height: 60px;
@@ -65,27 +66,28 @@ nav a {
     width: 100%;
     height: auto;
 }
+/* END NAVIGASI */
 
-/* PROFIL */
-.profile-container {
+/* FACILITATION */
+.facilitation-container {
     display: flex;
     justify-content: space-around;
 }
 
-.profile-item {
-    height: 100px;
+.facilitation-item {
+    min-height: 100px;
     text-align: -webkit-center;
 }
 
-.profile-img {
-    height: 200px;
+.facilitation-img {
+    height: 150px;
     background-size: cover;
     background-position: center;
     border-radius: 50%;
-    width: 200px;
+    width: 150px;
 }
 
-/* PROFILE IMAGE */
+/* FACILITATION IMAGE */
 .profile-1 {
     background-image: url(../assets/kelas.jpg);
 }
@@ -97,8 +99,192 @@ nav a {
 .profile-3 {
     background-image: url(../assets/labo.webp);
 }
+/* END FACILITATION */
 
 /* ACHIEVEMENT */
-#achievement {
-    padding-top: 150px;
+.achievement-container {
+    display: flex;
+    justify-content: space-around;
 }
+
+.achievement-item {
+    height: 200px;
+    text-align: -webkit-center;
+}
+
+.achievement-img {
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    width: 200px;
+}
+
+/* ACHIEVEMENT IMAGE */
+.ach1{
+    background-image: url(../assets/ach1.jpg);
+}
+
+.ach2 {
+    background-image: url(../assets/ach2.jpg);
+} 
+/* END ACHIEVEMENT */
+
+/* MESSAGE US */
+.message-form {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 80%;
+    max-width: 1200px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+/* FORM VALIDATE */
+.form-input, .form-output {
+    width: 48%;
+}
+
+.form-grup {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+/* INPUT */
+input[type="text"], input[type="date"], textarea {
+    width: calc(100% - 20px);
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    box-sizing: border-box;
+}
+
+textarea {
+    resize: vertical;
+    height: 100px;
+}
+
+.form-gender {
+    display: flex;
+    align-items: center;
+}
+
+.form-gender input[type="radio"] {
+    margin-right: 5px;
+}
+
+.form gender label {
+    margin-right: 20px;
+}
+
+/* BUTTON */
+button {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+/* FROM OUTPUT */
+.form-output {
+    border: 1px solid;
+}
+.output {
+    background-color: #f9f9f9;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+/* END FROM VALIDATE */
+
+/* FOOTER */
+footer {
+    text-align: right;
+}
+
+/* SCREEN RESPONSIBILITY */
+@media (max-width: 576px){
+    .logo-icon {
+        height: 36px;
+        width: 120px;
+    }
+    
+    .navbar {
+        height: auto;
+        flex-direction: column;
+    }
+    nav ul {
+        padding: 0px;
+    }
+
+    nav a {
+        font-size: 10px;
+    }
+    
+    h1 {
+        font-size: 15px;
+    }
+    
+    .banner-img {
+        height: 200px;
+    }
+
+    .facilitation-img {
+        height: 100px;
+        width: 100px;
+    }
+    
+    .achievement-img {
+        height: 150px;
+        width: 150px;
+    }
+
+    .message-form {
+        padding: 0px;
+        width: 100%;
+        flex-direction: column;
+        font-size: 10px;
+    }
+
+    button {
+        font-size: 10px;
+        padding: 5px 10px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .facilitation-container {
+      gap: 2rem;
+    }
+  
+    .facilitation-item {
+      flex: 1 1 calc(25% - 2rem);
+    }
+  
+    .achievement-item {
+      width: 60%;
+    }
+  
+    .form {
+      max-width: 500px;
+    }
+  
+    .output-form {
+      max-width: 500px;
+    }
+  }
